logs/Slang/chapter-6/6.16.9--string_atooct.sv.log
name: string_atooct
description: string.atooct()  tests
should_fail: 0
tags: 6.16.9
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.9--string_atooct.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.9--string_atooct.sv:9:11: error: invalid member access for type 'string'
	int b = a.atooct();
	        ~^~~~~~~
